syntax = "proto3";
package protos.connectors;

import "google/protobuf/wrappers.proto";
import "protos/base.proto";

message GithubMember {
  google.protobuf.StringValue login = 1;
}

message GithubRepositoryAssetModel {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue full_name = 3;
  google.protobuf.StringValue html_url = 4;
  google.protobuf.StringValue description = 5;
  repeated string topics = 6;
  GithubMember owner = 7;
}

message GithubMemberAssetModel {
  google.protobuf.UInt64Value id = 1;
  google.protobuf.StringValue login = 2;
  google.protobuf.StringValue html_url = 3;
}

message GithubRepositoryAssetOptions {
  message GithubRepository {
    google.protobuf.StringValue name = 1;
  }

  repeated GithubRepository repositories = 1;
}

message GithubMemberAssetOptions {
  repeated GithubMember members = 1;
}

message GithubAssetModel {
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;
  oneof asset {
    GithubRepositoryAssetModel github_repository = 5;
    GithubMemberAssetModel github_member = 6;
  }
}

message GithubAssets {
  repeated GithubAssetModel assets = 1;
}

